--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -16,11 +16,33 @@ html, body {
   display: none;
   animation: fadeEffect 2s;
   transition: 1s;
+  background-color: #111111;
 }
 
 @keyframes fadeEffect {
   from {margin-top: -100vh;}
   to {margin-top: 0;}
+}
+
+/* Button Style */
+.custom-full-btn {
+  color: #d6d6d6;
+  text-transform: uppercase;
+  font-size: 1.4rem;
+  padding: 10px 15px 10px 15px;
+  background-color: #333;
+  border: 3px solid #0488d3;
+  border-radius: 0px;
+  margin: 20px;
+}
+
+.custom-full-btn:hover {
+  color: #0488d3;
+  background-color: #333;
+}
+
+.custom-full-btn:focus, .custom-full-btn.focus {
+  box-shadow: 0 0 0 0.2rem #333;
 }
 
 
@@ -76,23 +98,67 @@ html, body {
   padding: 40px 20px 0px 0px;
 }
 
-/* Button Style */
-.custom-full-btn {
+/* Sondage Style */
+.unilan-sondage {
+  background-color: #444;
+  color: white;
+  min-height: 100vh;
+  padding-top: 200px;
+}
+
+.unilan-sondage-title {
+  font-family: 'Open Sans Condensed', sans-serif;
+  text-transform: uppercase;
+}
+
+.unilan-sondage-checkboxes {
+  border: 5px solid #0488d3;
+  background-color: #333333;
+  padding: 15px 5px;
+  margin: 10px 0px 0px 0px;
+  font-size: 1.1rem;
+}
+
+/* Forms Styles */
+.custom-form-big .form-control {
+  display: block;
+  width: 100%;
+  padding: 0.6rem 1rem;
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #d6d6d6;
+  background-color: #333333;
+  background-clip: padding-box;
+  border: 5px solid #0488d3;
+  border-radius: 0rem;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.custom-form-big .form-control:focus {
+  color: #d6d6d6;
+  background-color: #333333;
+  border-color: #0488d3;
+  outline: 0;
+  box-shadow: 0 0 0 0.2rem rgba(68, 68, 68, 0.251);
+}
+
+.custom-form-big .custom-full-btn {
+  width: 100%;
   color: #d6d6d6;
   text-transform: uppercase;
   font-size: 1.4rem;
   padding: 10px 15px 10px 15px;
   background-color: #333;
-  border: 3px solid #0488d3;
+  border: 5px solid #0488d3;
   border-radius: 0px;
-  margin: 20px;
+  margin: 10px 5px;
 }
 
-.custom-full-btn:hover {
+.custom-form-big .custom-full-btn:hover {
   color: #0488d3;
   background-color: #333;
 }
 
-.custom-full-btn:focus, .custom-full-btn.focus {
+.custom-form-big .custom-full-btn:focus, .custom-full-btn.focus {
   box-shadow: 0 0 0 0.2rem #333;
 }
