--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -20,8 +20,8 @@ html, body {
 }
 
 @keyframes fadeEffect {
-  from {margin-top: -100vh;}
-  to {margin-top: 0;}
+  from {margin-left: -100vw;}
+  to {margin-left: 0;}
 }
 
 /* Button Style */
@@ -89,6 +89,7 @@ html, body {
 
 .unilan-homepage-intro {
   background-image: url('../img/home.jpg'); 
+  background-repeat: no-repeat;
   color: white;
   font-family: 'Open Sans Condensed', sans-serif;
   text-transform: uppercase;
@@ -252,4 +253,46 @@ html, body {
 
 #unilan-tournament .custom-form-big .custom-full-btn {
   margin: 10px 0px;
+}
+
+/* leaderboard-css */
+#unilan-leaderboard {
+  padding-top: 200px;
+  background-color: #333;
+  color: white;
+}
+
+.unilan-leaderboard-maintitle {
+  font-weight: 700;
+  text-transform: uppercase;
+  background-color: transparent;
+  color: white;
+  margin-bottom: 30px;
+  font-size: 3rem;
+  text-transform: uppercase;
+}
+
+.unilan-leaderboard-wrapper {
+  width: 100%;
+  box-shadow: 0 3px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  padding: 0px 0px 10px 0px;
+  margin-bottom: 20px;
+  color: #333;
+  background-color: white;
+}
+
+.unilan-leaderboard-title {
+  font-weight: 100;
+  text-transform: uppercase;
+  border-left: 10px solid #0488d3;
+  border-top: 10px solid #0488d3;
+  padding: 10px 0px 10px 15px;
+  margin-bottom: 20px;
+}
+
+.unilan-leaderboard-first {
+  line-height: 4rem; 
+  font-size: 1.6rem; 
+  background-color: #0488d3; 
+  color: whitesmoke;
 }
