--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -102,6 +102,23 @@ html, body {
   padding: 40px 20px 0px 0px;
 }
 
+.unilan-homepage-author {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  padding: 5px;
+  text-align: center;
+  
+  background-color: #151515;
+  color: #aaaaaa;
+
+  font-size: 0.7rem;
+  font-weight: 100;
+  letter-spacing: 1px;
+  text-transform: none;
+}
+
 /* Sondage Style */
 .unilan-sondage {
   background-color: #444;
