--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -231,6 +231,7 @@ html, body {
 }
 
 #unilan-tournament .player-box {
+  display: inline-block;
   font-weight: 700;
   outline: 2px solid #555555;
   border-left: 5px solid whitesmoke;
@@ -240,6 +241,7 @@ html, body {
 }
 
 #unilan-tournament .player-box-winner {
+  display: inline-block;
   font-weight: 700;
   border: 2px solid #ffa500;
   background-color: #333;
@@ -248,6 +250,7 @@ html, body {
 }
 
 #unilan-tournament .game-box {
+  display: inline-block;
   font-weight: 700;
   outline: 2px solid #555555;
   border-left: 5px solid #0488d3;
