--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -278,7 +278,7 @@ html, body {
 
 /* leaderboard-css */
 #unilan-leaderboard {
-  min-height: 100%;
+  min-height: 100vh;
   padding-top: 200px;
   background-color: #333;
   color: white;
